Some C application files

--- a/file_operations_C/Makefile
+++ b/file_operations_C/Makefile
@@ -1,9 +1,9 @@
 CC=gcc
 
-.PHONY: all write_file_to_file clean
+.PHONY: clean
 
 write_file_to_file:
-	${CC} -o file_operations file_operations.c file_functions.c
+	${CC} -o file_operations main.c file_functions.c
 
 clean: 
 	rm -f file_to_file.o file_functions.o
